# you-have-mail

./: .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.github/workflows/: checks.yml
examples/: cli.rs
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 14.txt  15.txt  18.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt
http/: Cargo.toml
http/src/: lib.rs
proton/api/: Cargo.toml
proton/api/examples/: user_id.rs  user_id_sync.rs
proton/api/examples/captcha/: Cargo.toml
proton/api/src/: auth.rs  client.rs  lib.rs  login.rs  session.rs
proton/api/src/clientv2/: client.rs  mod.rs  session.rs  totp.rs
proton/api/src/domain/: errors.rs  event.rs  human_verification.rs  label.rs  labels.rs  message.rs  mod.rs  user.rs
proton/api/src/http/: client.rs  mod.rs  proxy.rs  request.rs  reqwest_client.rs  response.rs  sequence.rs  ureq_client.rs
proton/api/src/requests/: auth.rs  errors.rs  event.rs  labels.rs  mod.rs  tests.rs  user.rs
proton/api/tests/: labels.rs  login.rs
proton/api/tests/session/: labels.rs  login.rs  main.rs  utils.rs
proton/api/tests/utils/: mod.rs
proton/go-gpa-server/: Cargo.toml  build.rs
proton/go-gpa-server/go/: go.mod  go.sum  lib.go
proton/go-gpa-server/src/: go.rs  lib.rs
proton/go-srp/: Cargo.toml  build.rs
proton/go-srp/go/: go.mod  go.sum  lib.go
proton/go-srp/src/: go.rs  lib.rs
proton/proton-api/: Cargo.toml
proton/proton-api/examples/: user_id.rs
proton/proton-api/examples/captcha/src/: main.rs
proton/proton-api/src/: auth.rs  login.rs  session.rs
proton/proton-api/src/domain/: errors.rs  event.rs  human_verification.rs  label.rs  message.rs  mod.rs  user.rs
proton/proton-api/src/mocks/: auth.rs  events.rs  labels.rs  message.rs  mod.rs
proton/proton-api/src/requests/: auth.rs  event.rs  labels.rs  message.rs  mod.rs  tests.rs  user.rs
proton/proton-api/tests/: events.rs  labels.rs  login.rs  messages.rs
proton/proton-api/tests/utils/: mod.rs
scripts/: build-podman-exec.sh  build-podman.sh  build.sh  mk-image.sh  podman-do.sh
src/: account.rs  encryption.rs  lib.rs  log.rs  proxy.rs  traits.rs
src/backend/: mod.rs  null.rs  proton.rs
src/observer/: config.rs  observer_tests.rs  public.rs  stateful_notifier.rs  tests.rs  worker.rs
tests/: login_flow.rs
you-have-mail-android/: README.md  build.gradle  settings.gradle
you-have-mail-android/app/: build.gradle
you-have-mail-android/app/src/androidTest/java/dev/lbeernaert/youhavemail/: ExampleInstrumentedTest.kt
you-have-mail-android/app/src/main/: AndroidManifest.xml
you-have-mail-android/app/src/main/java/dev/lbeernaert/youhavemail/: .gitignore  AppState.kt  MainActivity.kt  Notifications.kt  OpenAppActivity.kt  ServiceView.kt  WebView.kt  errors.kt  log.kt  youhavemail.kt
you-have-mail-android/app/src/main/java/dev/lbeernaert/youhavemail/app/: ActionReceivers.kt  ActionWorker.kt  Backends.kt  LoginSequence.kt  Logs.kt  Notifications.kt  PollWorker.kt  ScreenshotMode.kt  StartReceiver.kt  State.kt  YhmInstance.kt
you-have-mail-android/app/src/main/java/dev/lbeernaert/youhavemail/components/: ActionButton.kt  AsyncScreen.kt  BackgroundTask.kt  PasswordField.kt
you-have-mail-android/app/src/main/res/drawable/: ic_base.xml
you-have-mail-android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
you-have-mail-android/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
you-have-mail-android/app/src/test/java/dev/lbeernaert/youhavemail/: ExampleUnitTest.kt
you-have-mail-android/gradle/wrapper/: gradle-wrapper.properties
you-have-mail-common/: Cargo.toml
you-have-mail-common/.github/workflows/: checks.yml
you-have-mail-common/examples/: cli.rs
you-have-mail-common/proton/proton-api/examples/: user_id.rs
you-have-mail-common/proton/proton-api/examples/captcha/src/: main.rs
you-have-mail-common/proton/proton-api/src/: client.rs  lib.rs  login.rs
you-have-mail-common/proton/proton-api/src/domain/: errors.rs  label.rs  message.rs
you-have-mail-common/proton/proton-api/src/requests/: auth.rs  event.rs  labels.rs  message.rs
you-have-mail-common/proton/proton-api/tests/: labels.rs  login.rs
you-have-mail-common/src/: account.rs  config.rs  encryption.rs  lib.rs  traits.rs
you-have-mail-common/src/backend/: mod.rs  null.rs  proton.rs
you-have-mail-common/src/observer/: mod.rs  observer_tests.rs  public.rs  rpc.rs  tests.rs  worker.rs
you-have-mail-common/tests/: login_flow.rs
you-have-mail-common/you-have-mail-http/: Cargo.toml
you-have-mail-common/you-have-mail-http/src/: lib.rs
you-have-mail-common/youhavemail/: Cargo.toml
you-have-mail-common/youhavemail/examples/: cli.rs
you-have-mail-common/youhavemail/src/: db.rs  events.rs  lib.rs  state.rs  yhm.rs
you-have-mail-common/youhavemail/src/backend/: dummy.rs  mod.rs  proton.rs
you-have-mail-common/youhavemail/src/v1/: mod.rs
you-have-mail-common/youhavemail/tests/: proton.rs
you-have-mail-common/youhavemail/tests/common/: mod.rs
you-have-mail-http/: Cargo.toml
you-have-mail-http/src/: lib.rs
you-have-mail-mobile/: Cargo.toml  README.md  build.rs  rust-toolchain.toml  uniffi.toml
you-have-mail-mobile/src/: account.rs  android.rs  bindings.rs  bindings.udl  errors.rs  events.rs  interfaces.rs  lib.rs  logging.rs  proxy.rs  service.rs  watcher.rs  yhm.rs
you-have-mail-mobile/src/backend/: mod.rs  proton.rs
youhavemail/: Cargo.toml
youhavemail/examples/: cli.rs
youhavemail/src/: account.rs  db.rs  encryption.rs  events.rs  lib.rs  state.rs  traits.rs  yhm.rs
youhavemail/src/backend/: dummy.rs  mod.rs  null.rs  proton.rs
youhavemail/src/observer/: config.rs  mod.rs  public.rs  tests.rs  worker.rs
youhavemail/src/v1/: config.rs
youhavemail/tests/: proton.rs
youhavemail/tests/common/: mod.rs
(+24 files in other folders)
