[workspace]
resolver = "2"
members = [
    "you-have-mail-common/you-have-mail-http",
    "you-have-mail-common/youhavemail",
    "you-have-mail-common/proton/proton-api",
    "you-have-mail-mobile"
]


[workspace.dependencies]
ureq = { version = "3.1.2", features = ["socks-proxy"] }
http ={version = "1.3.1"}
secrecy = { version = "0.10.3", features = ["serde"] }
thiserror = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
serde_json = "1.0.143"
url = "2.5.7"
anyhow = "1.0.99"
tracing = "0.1.41"
base64 = "0.22.1"
parking_lot = "0.12.4"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
rusqlite = { version = "0.37.0", features = ["chrono", "bundled"] }
chrono = "0.4"
mockito = "1.4.0"
sqlite-watcher = { version = "0.6.0", features = ["rusqlite"] }

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
