[package]
name = "you-have-mail-common"
version = "0.1.1"
edition = "2021"
authors = ["Leander Beernaert <lbb-dev@pm.me>"]
license = "AGPL-3.0-only"
categories = ["api-bindings", "email"]
readme = "README.md"

[features]
default = ["proton-backend"]
proton-backend = ["dep:proton-api-rs"]


[dependencies]
thiserror = "1"
async-trait = "0.1"
anyhow = "1"
chacha20poly1305 = "0.10"
serde_json = "1"
serde = "1"
secrecy = "0.8"

[dependencies.proton-api-rs]
version = "0.1.4"
optional = true

[dev-dependencies]
mockall = "0.11"
dirs = "4"
keyring = "2"
hex = "0.4"

[[example]]
name = "cli"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrc"]
