[package]
name = "you-have-mail-common"
version = "0.5.0"
edition = "2021"
authors = ["Leander Beernaert <lbb-dev@pm.me>"]
license = "AGPL-3.0-only"
categories = ["api-bindings", "email"]
readme = "README.md"

[features]
default = ["proton-backend"]
proton-backend = ["dep:proton-api-rs"]


[dependencies]
thiserror = "1"
anyhow = "1"
chacha20poly1305 = "0.10"
serde_json = "1"
serde = {version="1", features=["derive"]}
secrecy = "0.8"
crossbeam-channel = "0.5"

[dependencies.proton-api-rs]
version = "0.7.0"
optional = true
features = ["http-ureq"]

[dev-dependencies]
mockall = "0.11"
dirs = "5.0.0"
keyring = "2"
hex = "0.4"
env_logger = "0.10"

[[example]]
name = "cli"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrc"]
