[package]
name = "you-have-mail-mobile"
version = "0.14.0"
edition = "2024"
authors = ["Leander Beernaert <lbb-dev@pm.me>"]
license = "AGPL-3.0-only"
categories = ["email", "api-bindings"]
description = "You-Have-Mail mobile API bindings"
rust-version= "1.88.0"

[lib]
crate-type = ["cdylib"]
name = "youhavemail"

[dependencies]
uniffi = { version = "0.29.4", features = ["cli"] }
you-have-mail-common = { path = "../you-have-mail-common/youhavemail" }
thiserror = "2"
parking_lot = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = "0.2.3"
chrono = {workspace = true}
sqlite-watcher = {workspace = true}

[dev-dependencies]
tempfile = "3.22.0"

[lints.clippy]
pedantic = "deny"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen/uniffi-bindgen.rs"


