[package]
name = "you-have-mail-common"
version = "0.11.0"
edition = "2021"
authors = ["Leander Beernaert <lbb-dev@pm.me>"]
license = "AGPL-3.0-only"
categories = ["email"]
repository = "https://github.com/LeanderBB/you-have-mail-common"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
secrecy.workspace = true
parking_lot.workspace = true
base64.workspace = true
tracing.workspace = true
rusqlite.workspace = true
rusqlite-from-row.workspace = true
crossbeam-channel = "0.5"
chacha20poly1305 = "0.10"
http = { path = "../http" }

[dependencies.log4rs]
version = "1.2"
default-features = false
features = ["console_appender", "file_appender", "rolling_file_appender", "fixed_window_roller", "size_trigger", "compound_policy"]

[dependencies.proton-api]
path = "../proton/proton-api"

[dev-dependencies]
mockall = "0.12.1"
dirs = "5.0.0"
keyring = { version = "3.0.3", features = ["linux-native"] }
temp-dir = "0.1"
ctrlc = "3"
tracing-subscriber.workspace = true

#[[example]]
#name = "cli"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrc"]
