[package]
name = "you-have-mail-common"
version = "0.12.0"
edition = "2021"
authors = ["Leander Beernaert <lbb-dev@pm.me>"]
license = "AGPL-3.0-only"
categories = ["email"]
repository = "https://github.com/LeanderBB/you-have-mail-common"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
secrecy.workspace = true
parking_lot.workspace = true
base64.workspace = true
tracing.workspace = true
rusqlite.workspace = true
crossbeam-channel = "0.5"
chacha20poly1305 = "0.10"
http = { path = "../http" }
chrono.workspace = true
sqlite-watcher.workspace = true

[dependencies.proton-api]
path = "../proton/proton-api"

[dev-dependencies.proton-api]
path = "../proton/proton-api"
features = ["mocks"]

[dev-dependencies]
dirs = "5.0.0"
keyring = { version = "3.0.3", features = ["linux-native"] }
temp-dir = "0.1"
ctrlc = "3"
tracing-subscriber.workspace = true
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrc"]

[lints.clippy]
pedantic = "deny"
