[package]
name = "you-have-mail-common"
version = "0.14.0"
edition = "2024"
authors = ["Leander Beernaert <lbb-dev@pm.me>"]
license = "AGPL-3.0-only"
categories = ["email"]
repository = "https://github.com/LeanderBB/you-have-mail-common"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
secrecy.workspace = true
parking_lot.workspace = true
base64.workspace = true
tracing.workspace = true
rusqlite.workspace = true
chacha20poly1305 = "0.10"
you-have-mail-http = { path = "../you-have-mail-http" }
chrono.workspace = true
sqlite-watcher.workspace = true

[dependencies.proton-api]
path = "../proton/proton-api"

[dev-dependencies.proton-api]
path = "../proton/proton-api"
features = ["mocks"]

[dev-dependencies]
dirs = "5.0.0"
keyring = { version = "3.0.3", features = ["linux-native"] }
temp-dir = "0.1"
ctrlc = "3"
tracing-subscriber.workspace = true


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrc"]

[lints.clippy]
pedantic = "deny"
