[package]
name = "go-srp"
version = "0.1.6"
edition = "2021"
authors = ["Leander Beernaert <lbb-dev@pm.me>"]
license = "AGPL-3.0-only"
description = "Rust bindings for https://github.com/ProtonMail/go-srp"
keywords = ["api", "srp"]
categories = ["api-bindings"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"

[build-dependencies]
bindgen = "0.64"
