[package]
name = "proton-api"
authors = ["Leander Beernaert <lbb-dev@pm.me>"]
version = "0.14.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
go-srp = { path = "../go-srp", version = "0.1.6" }
thiserror.workspace = true
serde.workspace = true
serde_repr.workspace = true
serde_json.workspace = true
secrecy.workspace = true
parking_lot.workspace = true
tracing.workspace = true
anyhow.workspace = true
http = { path = "../../http" }
mockito = { version = "1.4.0", optional = true }


[features]
default = []
mocks = ["mockito"]

[dev-dependencies]
env_logger = "0.11"
url.workspace = true
tracing-subscriber.workspace = true
proton-api = { path = ".", features = ["mocks"] }

[[example]]
name = "user_id"

[lints.clippy]
pedantic = "deny"